# opengl-test

./: CMakeLists.txt  EBO.cpp  VAO.cpp  VBO.cpp  camera.cpp  glad.c  main.cpp  mesh.cpp  model.cpp  shaderClass.cpp  stb.cpp  texture.cpp
headers/: EBO.h  VAO.h  VBO.h  camera.h  mesh.h  model.h  shaderClass.h  texture.h
libraries/include/assimp/: revision.h
libraries/include/glad/: glad.h
libraries/include/glfw-3.4/: CMakeLists.txt
resources/models/landscape/: terrain.mtl
resources/shaders/: default_fragment.glsl  default_vertex.glsl  light_fragment.glsl  light_vertex.glsl
sponza/: sponza_better.mtl
